# GameOfLive

./: README.md  pyproject.toml
rplife/: __main__.py  cli.py  grid.py  patterns.py  views.py
