[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "rplife" 
dynamic = ["version"]
description = "Conway's Game of Life in your terminal" 
readme = "README.md" 
authors = [{ name = "Elisée NZEMBIA DJAHAPPI", email = "eliseenzembiadjahappi@gmail.com"}]
dependencies = [
    'tomli; python_version < "3.11"',
    'blessed; sys_platform == "win32"'
]

[project.scripts]
rplife = "rplife.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "rplife.__version__"}